# fast-konno-ohmachi

./: Demo_konno_ohmachi_smooth.py  LICENSE.txt  README.md  konno_ohmachi.py  setup.cfg
.github/workflows/: python-package.yml
demo/: Demo_konno_ohmachi_smooth.py  spectrum.mat
fast_konno_ohmachi/: __init__.py  _precalculated.py  main.py
tests/: test_main.py
