[metadata]
name = fast_konno_ohmachi
version = 0.1.0
description = A Python library that performs Konno-Ohmachi spectral smoothing very fast
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/fast-konno-ohmachi
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
